# sigma

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
lib/parser/: Cargo.toml
lib/parser/src/: ast.rs  error.rs  keyword.rs  lexer.rs  lib.rs  token.rs
lib/runtime/: Cargo.toml
lib/runtime/src/: error.rs  json.rs  lib.rs
lib/runtime/src/object/: bool.rs  f64.rs  func.rs  hash.rs  i64.rs  list.rs  mod.rs  null.rs  str.rs  tyty.rs
src/: main.rs  shell.rs
