[package]
name = "sigma"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
rustyline = "12.0.0"
sigma-parser.workspace = true
sigma-runtime.workspace = true

[workspace]
members = ["lib/parser", "lib/runtime"]

[workspace.dependencies]
sigma-parser = { path = "lib/parser" }
sigma-runtime = { path = "lib/runtime" }
